Changed selections to use mutable lists [#1740]